# ttc

./: .gitignore  CMakeLists.txt  README.md  configure.sh  extras.md
.github/workflows/: build.yml
example/BV/: case14.smt2  test.smt2
example/applications/: fixed_jani-examples_grid-10-10-14.smt2  fixed_jani-examples_grid-10-10.smt2  jani-examples_grid-10-10.smt2  node10_edge15_gen100_numgen30_flowlim50_seed0.smt2  node14_edge20_gen100_numgen30_flowlim50_seed0.smt2  preprocessed-examples_brp-16-2-14.smt2  preprocessed-examples_grid-100-0.49-200.smt2
example/function/: factor.smt2  multiplier.smt2
example/projection/: bv.smt2  lia.smt2
example/tests/: lra_disjoint.smt2  lra_single_box.smt2  projvar_bool_explicit.smt2  projvar_bv_explicit.smt2  weight_bool_or.smt2  weight_both_polarities.smt2  weight_default_projection.smt2  weight_negative_literal.smt2  weight_quarter_threequarter.smt2  weight_three_bool.smt2
example/tests/scripts/: check_track4_pwmc.py
example/volume/: grid3.smt2
patches/: skolemfc-library-interface.patch
scripts/: build.sh
src/: d4_interface.cpp  d4_interface.hpp  d4_smt.hpp  features.hpp  main.cpp  parser.cpp  parser.hpp  projected_enumerator.cpp  projected_enumerator.hpp
src/allsat-circuits/: CMakeLists.txt
src/allsat-circuits/benchmarks/: XOR.aag
src/allsat-circuits/benchmarks/bad_examples/: mult_out.aag
src/allsat-circuits/libs/: CMakeLists.txt
src/allsat-circuits/lorina/: aiger.hpp
src/allsat-circuits/src/: main.cpp
src/allsat-circuits/src/Aiger/: AigAndGate.hpp  AigerParser.hpp
src/allsat-circuits/src/AllSatAlgo/: AllSatAlgoBase.cpp  AllSatAlgoBase.hpp
src/allsat-circuits/src/AllSatAlgo/Blocking/: AllSatAlgoBlockingBase.cpp
src/allsat-circuits/src/AllSatSolver/: AllSatSolverBase.cpp
src/allsat-circuits/src/CirSimulation/: CirSim.cpp  CirSim.hpp
src/allsat-circuits/src/Globals/: Topor.hpp  ToporGlobal.hpp  ipasir_stub.cpp
src/allsat-circuits/src/Utilities/: InputParser.hpp  StringUtilities.hpp
src/csb/: stp_sat.cpp  stp_sat.hpp
src/d4/src/caching/: CacheList.hpp  CacheNoCollision.hpp
src/d4/src/caching/bucket/: BucketManager.hpp
src/d4/src/configurations/: ConfigurationDpllStyleMethod.hpp  ConfigurationPartialOrderHeuristic.hpp  ConfigurationSolver.hpp
src/d4/src/formulaManager/: FormulaManager.cpp
src/d4/src/formulaManager/cnf/: CnfManager.cpp  CnfManager.hpp  ResidualSimplifier.cpp  ResidualSimplifier.hpp
src/d4/src/heuristics/branchingHeuristic/: BranchingHeuristic.cpp
src/d4/src/heuristics/partialOrder/: PartialOrderHeuristic.cpp  PartialOrderHeuristicGiven.hpp
src/d4/src/heuristics/scoringVariable/: ScoringMethod.cpp
src/d4/src/methods/: DpllStyleMethod.hpp  ProjMCMethod.hpp
src/d4/src/options/branchingHeuristic/: OptionPartialOrderHeuristic.cpp
src/d4/src/options/methods/: OptionDpllStyleMethod.cpp  OptionDpllStyleMethod.hpp
src/d4/src/representation/hypergraph/cnf/: HyperGraphExtractorCnfDual.cpp  HyperGraphExtractorCnfDual.hpp
src/d4/src/solvers/: WrapperSolver.cpp  WrapperSolver.hpp
src/d4/src/solvers/cnf/: WrapperGlucose.cpp  WrapperGlucose.hpp  WrapperMinisat.cpp  WrapperMinisat.hpp
src/ddnnf/: TreeDecomposition.cpp  TreeDecomposition.hpp  arjun.cpp  arjun.hpp  cache.cpp  cache.hpp  cache_mode.hpp  iflowcutter.cpp  iflowcutter.hpp  logger.hpp  profiler.hpp  proj_ddnnf.cpp  proj_ddnnf.hpp  rewrite.hpp  var_order.cpp  var_order.hpp
src/eager/: bvcnf.cpp  bvcnf.hpp
src/pact/: bool_hash.cpp  bool_hash.hpp  bv_hash.cpp  bv_hash.hpp  hash_constraint.cpp  hash_constraint.hpp  next_index.cpp  next_index.hpp  pact.cpp  pact.hpp  saturatingcount.cpp  saturatingcount.hpp  smt_approx_mc.cpp  unused.cpp
src/skolemfc/: skolemfc_engine.cpp  skolemfc_engine.hpp
src/tdd/: tdd.cpp  tdd.hpp
src/tocnf/: tocnf.cpp  tocnf.hpp
src/volesti/: CITATION.cff  CONTRIBUTING.md  README.md
src/volesti/.github/workflows/: R-CMD-check-macOS.yml  R-CMD-check-ubuntu.yml  cmake-clang.yml  cmake-gcc.yml
src/volesti/docs/getting_started/: cpp_example.md
src/volesti/examples/optimization_spectrahedra/: CMakeLists.txt
src/volesti/examples/sampling-hpolytope-with-billiard-walks/: sampler.cpp
src/volesti/examples/sb_sampling/: CMakeLists.txt  README.md  sbtest.py  shakeandbake.cpp
src/volesti/include/convex_bodies/: hpolytope.h
src/volesti/include/convex_bodies/spectrahedra/: spectrahedron.h
src/volesti/include/diagnostics/: scaling_ratio.hpp
src/volesti/include/ode_solvers/: implicit_midpoint.hpp
src/volesti/include/optimization/: sliding_window.hpp
src/volesti/include/preprocess/: barrier_center_ellipsoid.hpp  feasible_point.hpp  inscribed_ellipsoid_rounding.hpp  max_inscribed_ellipsoid.hpp  rounding_util_functions.hpp
src/volesti/include/random_walks/: boltzmann_hmc_walk.hpp  shake_and_bake_walk.hpp
src/volesti/include/random_walks/crhmc/: crhmc_walk.hpp
src/volesti/include/sampling/: random_point_generators.hpp  sampling.hpp
src/volesti/include/volume/: volume_cooling_nonspherical_gaussians_crhmc.hpp
src/volesti/test/: CMakeLists.txt  sampling_test.cpp  shake_and_bake_test.cpp  test_internal_points.cpp
src/volume/: allsat_volume.cpp  allsat_volume.hpp  gmp_billiard_walk.hpp  lra_volume.cpp  lra_volume.hpp
src/weighted/: tounweighted.cpp  tounweighted.hpp
tests/: lra_redundant.smt2  lra_union.smt2  test_lra_volume.py
